fix for map on mobile?

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -394,6 +394,7 @@ a {
 	display: grid;
 	min-height: calc(100vh - 6rem - 2px);
 	width: 100%;
+	overflow-x: hidden;
 }
 
 .map-sidebar-toggle {
